--- a/custom/css/main.css
+++ b/custom/css/main.css
@@ -49,6 +49,7 @@ body{
 .btn-custom-small{
   font-size: 0.85em;
   text-transform: capitalize;
+  margin-top: -5px;
 }
 .input-custom{
   padding-top: 0px;
@@ -85,4 +86,6 @@ body{
   height: 400px;
   width: 100%;
 }
+
+
 
