--- a/custom/css/mainView.css
+++ b/custom/css/mainView.css
@@ -6,3 +6,12 @@
     border: 1px solid #ccc;
   }
 }
+
+.green-text{
+  color: green;
+  font-weight: bold;
+}
+.red-text{
+  color: red;
+  font-weight: bold;
+}
