--- a/custom/css/route.css
+++ b/custom/css/route.css
@@ -1,11 +1,19 @@
-.card{
-  height: 500px !important;
+.card-insert-route{
+  height: 400px !important;
 }
 .card-points ul{
-  height: 350px; 
+  height: 270px; 
   overflow: auto;
 }
 .alert{
   margin-top: 5px;
   margin-bottom: 5px;
+}
+.map{
+  width: 100%;
+  height: 340px;
+}
+.points{
+  height: 270px!important; 
+  overflow: auto!important;
 }
